Add linkedin for Anna

--- a/index.html
+++ b/index.html
@@ -608,6 +608,7 @@
 							<div class="img">
 								<img src="assets/images/team/anna-doan.jpg" alt="">
 								<ul class="social">
+									<li><a href="https://www.linkedin.com/in/anna-doan-cfa-3b108443/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 								</ul>
 							</div>
 						</div>
