sPoW and minor corrections

--- a/index.html
+++ b/index.html
@@ -226,14 +226,14 @@
 						<td><b>Converted from NDR</b> with market-driven exchange rate, autonomous</td>
 						<td><b>Out of thin air</b>, autonomous</td>
 						<td><b>Out of thin air</b>, manually by ETH holder</td>
-						<td><b>Out of thin air</b>, manually by Tether (the companny)</td>
+						<td><b>Out of thin air</b>, manually by Tether (the company)</td>
 					</tr>
 					<tr>
 						<td scope="row">Capital Value Flow</td>
 						<td>Circulated <b>inside the system</b></td>
 						<td>Given directly to Share holder possession, <b>outside of the system</b></td>
 						<td>Given directly to ETH holder possession, <b>outside of the system</b></td>
-						<td>Given directly to the companny, <b>outside of the system</b></td>
+						<td>Given directly to the company, <b>outside of the system</b></td>
 					</tr>
 					<tr>
 						<td scope="row">Expansion</td>
@@ -258,7 +258,7 @@
 					</tr>
 					<tr>
 						<td scope="row">Consensus</td>
-						<td>PoW/PoS Hybrid</td>
+						<td>Selective Proof of Work</td>
 						<td>N/A</td>
 						<td>Ethereum Smart Contract</td>
 						<td>Centralized service.</td>
