--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 						<div class="icon">
 							<i class="fa fa-cogs"></i>
 						</div>
-						<h5 class="features-title">Hybrid PoW and PoS consensus</h5>
-						<p>An ASIC-proof, anti-pool PoW algorithm keeps the network always in absolute decentralization. A Staking Service Network double the security of the chain by allowing participants to stake their holding to serve and protect the system.</p>
+						<h5 class="features-title">Selective Staking Proof of Work	</h5>
+						<p>S<sup>2</sup>PoW is a hybrid consensus, with PoW and PoS tightly coupled together to power a fully decentralized, highly available and energy efficient public blockchain. A Staking Service Network double the security of the chain by allowing participants to stake their holding to serve and protect the system.</p>
 					</div>
 				</div>
 			</div>
@@ -258,7 +258,7 @@
 					</tr>
 					<tr>
 						<td scope="row">Consensus</td>
-						<td>Selective Proof of Work</td>
+						<td>S<sup>2</sup>PoW</td>
 						<td>N/A</td>
 						<td>Ethereum Smart Contract</td>
 						<td>Centralized service.</td>
