--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-12 align-self-center">
 					<div class="left-heading">
-						<h2 class="section-title">A balanced combination of technology.</h2>
+						<h2 class="section-title">Disruptive Combination of Technology</h2>
 					</div>
 					<div class="left-text">
-						<p>Built on the time-tested blockchain technology with ASIC-proof and anti-pool mining algorithm, Endurio is secured by the most decentralized Proof of Work consensus ever possible. With our novel Staking Service Network and Economic-driven Sharding Protocol, many advanced services and features can be delivered with unlimited scalability for the payment network.</p>
+						<p>Built on a tightly-coupled hybrid consensus, S<sup>2</sup>PoW preserves the competitive nature of the time-tested PoW, with much less energy consumption and allows the stakeholders to intrinsically participate in securing the consensus. With our novel Staking Service Network and Economic-driven Sharding Protocol, many advanced services and features can be delivered with unlimited scalability for the payment network.</p>
 					</div>
 					<a href="EndurioYellowPaper.pdf" target=_blank class="btn-secondary-line mobile-bottom-fix">Yellowpaper (Draft)</a>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12 align-self-center">
-					<img src="assets/images/theme-1-about.svg" class="img-fluid float-right" alt="Arda ICO">
+					<img src="assets/images/theme-1-about.svg" class="img-fluid float-right" alt="Endurio">
 				</div>
 			</div>
 		</div>
