Lead Dev instead of CTO

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 							</div>
 						</div>
 						<h3 class="team-name">Antony Pham</h3>
-						<span>Chief Technology Officer</span>
+						<span>Lead Developer</span>
 						<span>Founder</span>
 					</div>
 				</div>
