Update roadmap for consensus.

--- a/index.html
+++ b/index.html
@@ -318,13 +318,15 @@
 				<div class="col-lg">
 					<div class="single-roadmap roadmap-sm">
 						<h6>Q4/2018</h6>
-						<p>Double tokens & bidding system.</p>
+						<p>Double tokens.</p>
+						<p>Price stabilization.</p>
 					</div>
 				</div>
 				<div class="col-lg width-0">
 					<div class="single-roadmap roadmap-down">
 						<h6>Q1/2019</h6>
-						<p>Exchanges listing & price stabilization.</p>
+						<p>S<sup>2</sup>PoW consensus.</p>
+						<p>Public release.</p>
 					</div>
 				</div>
 				<div class="col-lg">
