--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-					<div class="features-line"  data-scroll-reveal="enter right move 30px over 0.6s after 0.6s">
+					<div class="features-line line"  data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
 						<div class="icon">
 							<i class="fa fa-cogs"></i>
 						</div>
@@ -112,7 +112,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-					<div class="features-line line" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
+					<div class="features-line" data-scroll-reveal="enter right move 30px over 0.6s after 0.6s">
 						<div class="icon">
 							<i class="fa fa-code-fork"></i>
 						</div>
@@ -121,7 +121,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-					<div class="features-line" data-scroll-reveal="enter right move 30px over 0.6s after 0.6s">
+					<div class="features-line line" data-scroll-reveal="enter right move 30px over 0.6s after 0.2s">
 						<div class="icon">
 							<i class="fa fa-clock-o"></i>
 						</div>
@@ -130,7 +130,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-					<div class="features-line line" data-scroll-reveal="enter right move 30px over 0.6s after 0.6s">
+					<div class="features-line line" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
 						<div class="icon">
 							<i class="fa fa-gavel"></i>
 						</div>
@@ -139,7 +139,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-					<div class="features-line line" data-scroll-reveal="enter right move 30px over 0.6s after 0.6s">
+					<div class="features-line" data-scroll-reveal="enter right move 30px over 0.6s after 0.6s">
 						<div class="icon">
 							<i class="fa fa-dollar"></i>
 						</div>
@@ -158,15 +158,17 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-12 align-self-center">
-					<div class="left-heading">
+					<div class="left-heading" data-scroll-reveal="enter right move 30px over 0.6s after 0.2s">
 						<h2 class="section-title">Disruptive Combination of Technology</h2>
 					</div>
-					<div class="left-text">
+					<div class="left-text" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
 						<p>Built on a tightly-coupled hybrid consensus, S<sup>2</sup>PoW preserves the competitive nature of the time-tested PoW, with much less energy consumption and allows the stakeholders to intrinsically participate in securing the consensus. With our novel Staking Service Network and Economic-driven Sharding Protocol, many advanced services and features can be delivered with unlimited scalability for the payment network.</p>
 					</div>
-					<a href="EndurioYellowPaper.pdf" target=_blank class="btn-secondary-line mobile-bottom-fix">Yellowpaper (Draft)</a>
+					<div data-scroll-reveal="enter right move 30px over 0.6s after 0.8s">
+						<a href="EndurioYellowPaper.pdf" target=_blank class="btn-secondary-line mobile-bottom-fix">Yellowpaper (Draft)</a>
+					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-12 align-self-center">
+				<div class="col-lg-6 col-md-6 col-sm-12 align-self-center" data-scroll-reveal="enter top move 30px over 0.6s after 0.6s">
 					<img src="assets/images/theme-1-about.svg" class="img-fluid float-right" alt="Endurio">
 				</div>
 			</div>
@@ -176,7 +178,7 @@
 
 	<!-- ***** Comparision Start ***** -->
 	<section class="section" id="comparision">
-		<div class="container">
+		<div class="container" data-scroll-reveal="enter top move 30px over 0.6s after 0.2s">
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="center-heading">
@@ -184,7 +186,7 @@
 					</div>
 				</div>
 			</div>
-			<table class="table table-hover table-responsive-sm">
+			<table class="table table-hover table-responsive-sm" data-scroll-reveal="enter bottom move 30px over 0.6s after 0.4s">
 				<thead>
 					<tr>
 						<th scope="col"></th>
@@ -309,7 +311,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<div class="center-heading">
+					<div class="center-heading" data-scroll-reveal="enter left move 30px over 0.6s after 0.2s">
 						<h2 class="section-title">Roadmap</h2>
 					</div>
 				</div>
@@ -588,7 +590,7 @@
 						<span>Founder</span>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
 					<div class="team-round">
 						<div class="profile">
 							<div class="img">
@@ -604,7 +606,7 @@
 						<span>Former Director of Blockchain Solutions at Tomochain</span>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
 					<div class="team-round">
 						<div class="profile">
 							<div class="img">
@@ -635,7 +637,7 @@
 				</div>
 			</div>
 			<div class="row d-flex justify-content-center">
-				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s">
 					<div class="team-round">
 						<div class="profile">
 							<div class="img">
@@ -650,7 +652,7 @@
 						<span>Researcher at Toulouse School of Economics</span>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
 					<div class="team-round">
 						<div class="profile">
 							<div class="img">
@@ -681,7 +683,7 @@
 				</div>
 			</div>
 			<div class="row d-flex justify-content-center">
-				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 team-member" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s">
 					<div class="team-round">
 						<div class="profile">
 							<div class="img">
