--- a/index.html
+++ b/index.html
@@ -311,58 +311,58 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<div class="center-heading" data-scroll-reveal="enter left move 30px over 0.6s after 0.2s">
+					<div class="center-heading">
 						<h2 class="section-title">Roadmap</h2>
 					</div>
 				</div>
 			</div>
 			<div class="row roadmap-list align-items-end">
-				<div class="col-lg">
+				<div class="col-lg" data-scroll-reveal="enter bottom move 30px over 0.6s after 0.2s">
 					<div class="single-roadmap roadmap-sm">
 						<h6>Q4/2018</h6>
 						<p>Double tokens.</p>
 						<p>Price stabilization.</p>
 					</div>
 				</div>
-				<div class="col-lg width-0">
+				<div class="col-lg width-0" data-scroll-reveal="enter top move 30px over 0.6s after 0.3s">
 					<div class="single-roadmap roadmap-down">
 						<h6>Q1/2019</h6>
 						<p>S<sup>2</sup>PoW consensus.</p>
 						<p>Public release.</p>
 					</div>
 				</div>
-				<div class="col-lg">
+				<div class="col-lg" data-scroll-reveal="enter bottom move 30px over 0.6s after 0.4s">
 					<div class="single-roadmap roadmap-lg">
 						<h6>Q2/2019</h6>
 						<p>Retail and e-commerce platforms integration.</p>
 					</div>
 				</div>
-				<div class="col-lg width-0">
+				<div class="col-lg width-0" data-scroll-reveal="enter top move 30px over 0.6s after 0.5s">
 					<div class="single-roadmap roadmap-down">
 						<h6>Q3/2019</h6>
 						<p>On-chain Governance: Voting by Activity.</p>
 					</div>
 				</div>
-				<div class="col-lg">
+				<div class="col-lg" data-scroll-reveal="enter bottom move 30px over 0.6s after 0.6s">
 					<div class="single-roadmap roadmap-sm">
 						<h6>Q1/2020</h6>
 						<p>Staking Service Network</p>
 					</div>
 				</div>
-				<div class="col-lg width-0">
+				<div class="col-lg width-0" data-scroll-reveal="enter top move 30px over 0.6s after 0.7s">
 					<div class="single-roadmap roadmap-down">
 						<h6>Q2/2020</h6>
 						<p>Cross-chain Absorption</p>
 					</div>
 				</div>
-				<div class="col-lg">
+				<div class="col-lg" data-scroll-reveal="enter bottom move 30px over 0.6s after 0.8s">
 					<div class="single-roadmap roadmap-lg">
 						<h6>Q4/2020</h6>
 						<p>Sharding.</p>
 					</div>
 				</div>
 				<div class="col-lg">
-					<div class="single-roadmap roadmap-down">
+					<div class="single-roadmap roadmap-down" data-scroll-reveal="enter top move 30px over 0.6s after 0.9s">
 						<h6>Q2/2021</h6>
 						<p>UTXO-Oriented Smart Contract.</p>
 					</div>
@@ -393,7 +393,7 @@
 	<section class="section bg-top" id="faq">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-lg-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.2s">
 					<div class="center-heading">
 						<h1 class="section-title">FAQ</h1>
 					</div>
@@ -407,7 +407,7 @@
                 <p>Economic</p>
               </div>
             </div>
-            <div class="card">
+            <div class="card" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
               <div class="card-header" id="faqHeading-1">
                 <div class="mb-0">
                   <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-1" data-aria-expanded="true" data-aria-controls="faqCollapse-1">
@@ -421,7 +421,7 @@
                 </div>
               </div>
             </div>
-            <div class="card">
+            <div class="card" data-scroll-reveal="enter right move 30px over 0.6s after 0.5s">
               <div class="card-header" id="faqHeading-2">
                 <div class="mb-0">
                   <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-2" data-aria-expanded="false" data-aria-controls="faqCollapse-2">
@@ -436,7 +436,7 @@
                 </div>
               </div>
             </div>
-            <div class="card">
+            <div class="card" data-scroll-reveal="enter right move 30px over 0.6s after 0.6s">
               <div class="card-header" id="faqHeading-3">
                 <div class="mb-0">
                   <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-3" data-aria-expanded="false" data-aria-controls="faqCollapse-2">
@@ -452,7 +452,7 @@
                 </div>
               </div>
             </div>
-            <div class="card">
+            <div class="card" data-scroll-reveal="enter right move 30px over 0.6s after 0.7s">
               <div class="card-header" id="faqHeading-4">
                 <div class="mb-0">
                   <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-4" data-aria-expanded="false" data-aria-controls="faqCollapse-2">
@@ -473,7 +473,7 @@
                 <p>General</p>
               </div>
             </div>
-            <div class="card">
+            <div class="card" data-scroll-reveal="enter right move 30px over 0.6s after 0.2s">
               <div class="card-header" id="faqHeading-5">
                 <div class="mb-0">
                   <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-5" data-aria-expanded="true" data-aria-controls="faqCollapse-1">
@@ -487,7 +487,7 @@
                 </div>
               </div>
             </div>
-            <div class="card">
+            <div class="card" data-scroll-reveal="enter right move 30px over 0.6s after 0.3s">
               <div class="card-header" id="faqHeading-6">
                 <div class="mb-0">
                   <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-6" data-aria-expanded="false" data-aria-controls="faqCollapse-2">
@@ -508,7 +508,7 @@
                 <p>Technical</p>
               </div>
             </div>
-						<div class="card">
+						<div class="card" data-scroll-reveal="enter right move 30px over 0.6s after 0.2s">
 							<div class="card-header" id="faqHeading-7">
 								<div class="mb-0">
 									<h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-7" data-aria-expanded="true" data-aria-controls="faqCollapse-1">
@@ -529,7 +529,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="card">
+						<div class="card" data-scroll-reveal="enter right move 30px over 0.6s after 0.3s">
 							<div class="card-header" id="faqHeading-8">
 								<div class="mb-0">
 									<h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-8" data-aria-expanded="false" data-aria-controls="faqCollapse-2">
@@ -543,7 +543,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="card">
+						<div class="card" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
 							<div class="card-header" id="faqHeading-9">
 								<div class="mb-0">
 									<h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-9" data-aria-expanded="false" data-aria-controls="faqCollapse-3">
