Update emails to zergity.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Endurio - A scalable stablecoin for everyday transaction</title>
 	<meta name="description" content="Endurio - A scalable stablecoin for everyday transaction" />
 	<meta name="keywords" content="bitcoin, ethereum, endurio, ico, token, btc, eth, scalable, stable, cryotocurrency, elastic, supply, sharding, instant confirmation" />
-	<meta name="author" content="Antony"/>
+	<meta name="author" content="Zergity"/>
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="assets/images/endurio-favicon.png" />
@@ -572,9 +572,7 @@
 						<div class="contact">
 							<h3 class="section-title">Get In Touch</h3>
 							<ul class="list">
-								<li><i class="fa fa-envelope-o"></i><a href="mailto:antony@endur.io"> antony@endur.io</a></li>
-								<li><i class="fa fa-envelope-o"></i><a href="mailto:michael@endur.io">michael@endur.io</a></li>
-								<li><i class="fa fa-envelope-o"></i><a href="mailto:anna@endur.io">anna@endur.io</a></li>
+								<li><i class="fa fa-envelope-o"></i><a href="mailto:zergity@endur.io">zergity@endur.io</a></li>
 								<li><i class="fa fa-paper-plane-o"></i><a href=" https://t.me/joinchat/Iq3KKRCXgyl1HJN27-o5Pg" target="_blank">Join us on Telegram</a></li>
 							</ul>
 						</div>
