Add github parallax and menu.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 						<ul class="nav">
 							<li><a href="#features">FEATURES</a></li>
 							<li><a href="#technical-summary">TECHNOLOGY</a></li>
+							<li><a href="#github">GITHUB</a></li>
 							<li><a href="#comparision">COMPARISION</a></li>
 							<li><a href="#roadmap">ROADMAP</a></li>
 							<li><a href="#faq">FAQ</a></li>
@@ -174,6 +175,23 @@
 		</div>
 	</section>
 	<!-- ***** Technical Summary End ***** -->
+
+	<!-- ***** GitHub Parallax Start ***** -->
+	<section class="parallax" id="github">
+		<div class="parallax-content">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<h1 class="section-title">Contribute With Us On</h1>
+					</div>
+					<div class="offset-lg-3 col-lg-6">
+						<a href="https://github.com/endurio" class="btn-white-line" target="_blank">GitHub</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- ***** GitHub Parallax End ***** -->
 
 	<!-- ***** Comparision Start ***** -->
 	<section class="section" id="comparision">
