Update top desc.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 align-self-center">
 						<h1>ENDURIO</h1>
-						<p>Bring the real usability to cryptocurrency in retail and e-commerce market, with an elastic supply stablecoin, unlimited scalability, and instant confirmation.</p>
+						<p>The only Decentralized Trustless Stablecoin.
+							<br/>Where nobody owes anyone anything.
+							<br/>With elastic supply that always matches the market demand.
+						</p>
+						<p align=right>No more. No less.</p>
 						<a href="EndurioWhitePaper.pdf" target=_blank class="btn-secondary-box">Download Whitepaper</a>
 					</div>
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 align-self-center">
