--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
 	<!-- Custom CSS -->
 	<link href="assets/css/dark.css" rel="stylesheet" type="text/css">
+
+	<!-- Graph -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.3.0/snap.svg-min.js"></script>
+	<script src="js/graph.js"></script>
+	<link href="css/graph.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
 
@@ -71,14 +78,25 @@
 						<h1>ENDURIO</h1>
 						<p>The only Decentralized Trustless Stablecoin.
 							<br/>Where nobody owes anyone anything.
-							<br/>With elastic supply that always matches the market demand.
+							<br/>With elastic <span class='text-supply'>supply</span> that always matches the market <span class='text-demand'>demand</span>.
 						</p>
 						<p align=right>No more. No less.</p>
 						<a href="EndurioWhitePaper.pdf" target=_blank class="btn-secondary-box">Download Whitepaper</a>
 					</div>
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 align-self-center">
-						<div class="header-image">
-							<img src="assets/images/header.svg" class="img-fluid d-block mx-auto" alt="">
+						<div class="charts-container cf">
+							<div class="chart" id="graph-1-container">
+								<div class="chart-svg">
+									<svg class="chart-line" id="chart-1" viewBox="0 13 20 18">
+										<defs>
+											<clipPath id="clip" x="0" y="0" width="122.5" height="40" >
+												<rect id="clip-rect" x="-80" y="0" width="77" height="38.7"/>
+											</clipPath>
+										</defs>
+										<animate attributeName="viewBox" values="0 13 20 18; 102.5 13 20 18" begin="2s" dur="18s" fill="remove" repeatCount="indefinite"/>
+									</svg>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
