--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
 							<br/>With elastic <span class='text-supply'>supply</span> that always matches the market <span class='text-demand'>demand</span>.
 						</p>
 						<p align=right>No more. No less.</p>
-						<a href="EndurioWhitePaper.pdf" target=_blank class="btn-secondary-box">Download Whitepaper</a>
 					</div>
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 align-self-center">
 						<div class="charts-container cf">
@@ -98,6 +97,11 @@
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 align-self-center" style="top:-40px;">
+						<p align=center>
+							<a href="EndurioWhitePaper.pdf" target=_blank class="btn-secondary-box">Download Whitepaper</a>
+						</p>
 					</div>
 				</div>
 			</div>
